flux/apps/ai/litellm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  namespace: litellm
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - litellm.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: litellm-litellm-ui
      port: 3000
